k8s/chuck-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-service
  labels:
    app: spring-k8s
    app.kubernetes.io/name: chuck-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chuck-service
  template:
    metadata:
      labels:
        app: chuck-service
        app.kubernetes.io/name: chuck-service
    spec:
      containers:
        - name: chuck-service
          image: chuck-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chuck-service
spec:
  selector:
    app: chuck-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
